--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
             };
             var smellyCheese;
             var smellyPickles;
+
+            function blah () {
+                alert("BLAH")
+            }
+
         };
     </script>
 </body>
