--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>This is my other lakshd body, yeah</p>
     <script>
         for(i=0; i < 72; i++) {
-            console.log("japan" + i);
+            console.log("japan is not" + i);
             console.log("stinky" + i);
             var somethingelsetoo21231256;
 
