--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             function h() {
                 var i;
             };
-            var smellyCheese;
-            var smellyPickles;
+            var tastyCheese;
+            var yuckyPickles;
         };
     </script>
 </body>
